# strawberry_debug

./: README.md  db.sqlite3  pyproject.toml
app/: schema.py  settings.py
app/fixtures/: berries.json
app/migrations/: 0001_initial.py  0002_fruit_color.py  0003_fruit_link.py  0004_rename_link_fruit_social_fb_fruit_social_tik_and_more.py  0005_remove_fruit_color_color_position_color_size.py  0006_fruit_color.py  0007_remove_fruit_color_color_color.py  0008_rename_color_color_fruit.py  0009_product_rename_fruit_user_delete_color_product_user.py  0010_remove_user_social_fb_remove_user_social_tik_and_more.py
demo/: admin.py  db.sqlite3  models.py  schema.py  settings.py  urls.py
demo/migrations/: 0001_initial.py
